fixing alignment of img, take 2

--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,7 @@ footer.page-footer {
 }
 
 .content img {
-  width: 100%;
-  max-width: 800px;
+  max-width: 100%;
 }
 
 .cloak {
